--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,12 @@
   "version": "1.0.0",
   "manifest_version": 3,
   "default_locale": "en",
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "pixtab@pixtab.extension",
+      "strict_min_version": "113.0"
+    }
+  },
   "icons": {
     "16": "icons/icon-16.png",
     "32": "icons/icon-32.png",
