--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,14 @@
   "browser_specific_settings": {
     "gecko": {
       "id": "pixtab@pixtab.extension",
-      "strict_min_version": "113.0"
+      "strict_min_version": "113.0",
+      "data_collection_permissions": {
+        "collects": false,
+        "required": [
+          "none"
+        ],
+        "optional": []
+      }
     }
   },
   "icons": {
