--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
-  "name": "PixTab",
-  "version": "0.9",
+  "name": "__MSG_extensionName__",
+  "description": "__MSG_extensionDescription__",
+  "version": "1.0",
   "manifest_version": 3,
   "default_locale": "en",
   "browser_specific_settings": {
@@ -23,7 +24,7 @@
     "128": "icons/icon-128.png"
   },
   "action": {
-    "default_title": "Pix Tab",
+    "default_title": "__MSG_actionTitle__",
     "default_icon": {
       "16": "icons/icon-16.png",
       "32": "icons/icon-32.png",
