Update build scripts and manifest for packaging improvements
Switched from Compress-Archive to tar for creating zip files in build scripts to ensure correct internal path separators, addressing Firefox AMO requirements. Refined manifest transformation logic in both build.bat and build.sh for background type handling. Removed unused data_collection_permissions from manifest.json.

--- a/manifest.json
+++ b/manifest.json
@@ -7,14 +7,7 @@
   "browser_specific_settings": {
     "gecko": {
       "id": "pixtab@pixtab.extension",
-      "strict_min_version": "113.0",
-      "data_collection_permissions": {
-        "collects": false,
-        "required": [
-          "none"
-        ],
-        "optional": []
-      }
+      "strict_min_version": "113.0"
     }
   },
   "icons": {
