--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,16 @@
 {
   "name": "__MSG_extensionName__",
   "description": "__MSG_extensionDescription__",
-  "version": "1.2",
+  "version": "1.3",
   "manifest_version": 3,
   "default_locale": "en",
   "browser_specific_settings": {
     "gecko": {
       "id": "pixtab@pixtab.extension",
-      "strict_min_version": "113.0"
+      "strict_min_version": "140.0",
+      "data_collection_permissions": {
+        "required": ["none"]
+      }
     }
   },
   "icons": {
