--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "__MSG_extensionName__",
   "description": "__MSG_extensionDescription__",
-  "version": "1.4",
+  "version": "1.6",
   "manifest_version": 3,
   "default_locale": "en",
   "browser_specific_settings": {
@@ -37,7 +37,8 @@
   },
   "permissions": [
     "storage",
-    "declarativeNetRequest"
+    "declarativeNetRequest",
+    "cookies"
   ],
   "host_permissions": [
     "*://*.pixiv.net/*",
