Add GitHub Actions workflow for release
Introduces a release workflow that builds the PixTab extension, extracts the version from manifest.json, and creates or updates a GitHub Release with the build artifacts.

--- a/manifest.json
+++ b/manifest.json
@@ -29,7 +29,7 @@
     }
   },
   "chrome_url_overrides": {
-    "newtab": "index.html"
+    "newtab": "src/newtab/index.html"
   },
   "background": {
     "service_worker": "src/background/runtime.js",
@@ -44,5 +44,5 @@
     "*://*.pixiv.net/*",
     "*://*.pximg.net/*"
   ],
-  "options_page": "options.html"
+  "options_page": "src/options/options.html"
 }
