--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,9 @@
 name: Release PixTab
 
 on:
+  push:
+    branches:
+      - main
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * *' # 每天凌晨 0:00 UTC 运行
@@ -56,6 +59,14 @@ jobs:
           VERSION=$(node -e "console.log(require('./manifest.json').version)")
           echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
 
+      - name: Update Git Tag
+        if: steps.check_updates.outputs.SKIP != 'true'
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git tag -f v${{ steps.get_version.outputs.VERSION }}
+          git push origin v${{ steps.get_version.outputs.VERSION }} --force
+
       - name: Create or Update GitHub Release
         if: steps.check_updates.outputs.SKIP != 'true'
         uses: softprops/action-gh-release@v2
@@ -65,6 +76,7 @@ jobs:
           draft: false
           prerelease: false
           token: ${{ secrets.GITHUB_TOKEN }}
+          generate_release_notes: true
           files: |
             dist/*.zip
             dist/*.xpi
