加入在非代理环境下，未配置反向代理时的静默切换反向代理功能
使用i.pixiv.re

--- a/manifest.json
+++ b/manifest.json
@@ -42,7 +42,10 @@
   ],
   "host_permissions": [
     "*://*.pixiv.net/*",
-    "*://*.pximg.net/*"
+    "*://*.pximg.net/*",
+    "*://*.pixiv.re/*",
+    "*://*.pixiv.cat/*",
+    "*://*.pixiv.nl/*"
   ],
   "options_page": "src/options/options.html"
 }
